--- a/src/spide2d/meson.build
+++ b/src/spide2d/meson.build
@@ -6,6 +6,10 @@ source_files = [
     'src/backend_sdl/window.hpp',
     'src/backend_sdl/hotkey_registry.cpp',
     'src/backend_sdl/hotkey_registry.hpp',
+    'src/backend_sdl/shader.cpp',
+    'src/backend_sdl/shader.hpp',
+    'src/backend_sdl/texture.cpp',
+    'src/backend_sdl/texture.hpp',
     'src/window.cpp',
 ]
 
@@ -17,7 +21,6 @@ libspide2d = static_library('spide2d',
         sdl2,
         glad_dependency,
         libdl,
-        json,
         boost
     ], 
     include_directories: spide2d_include_dirs, 
